		* Bar plots
		* Plot templates - allow to save and re-use custom plot configurations
		* Histogram
			* error bars (Possion sqrt(N) error or values from custom columns)
			* rug plots
			* allow to create a data spreadsheet with the positions and values of the histogram bins
		* Box Plot
			* rug plots
			* allow to create a data spreadsheet with the box plot metrics (quartiles, median, etc.)
	* [spreadsheet]
		* use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
	* [import]
		* Import data from Excel .xlsx files using QXlsx library
		* HDF5: support VLEN data import
		* Live data: support multiple values via TCP
	* [export]
		* Use the current working project directory, if available, as the default export path
	* [analysis]
		* guess start values of fit parameter for polynomial models by linear regression
		* allow to create a spreadsheet with the data steming from the result of the computation

Performance improvements:
	* reduce the memory consumption during the spreadsheet export to Sqlite
	* reduce the memory consumption when importing from a database table into the spreadsheet
	* faster import of files with a big number of columns
	* faster creation of a big number of columns in the spreadsheet

Bug fixes:
	* [worksheet]
		* don't crash when undoing the step "add info element".
		* don't crash when changing the error bar types in the curve with no x-column selected yet
		* don't show any context menu in the presenter widget
		* use the full screen size in the dynamic presenter widget for worksheets with "use view size" property set to true
		* allow to zoom the view in the dynamic presenter widget
		* fix using custom value label with invalid data points in xy-curve (BUG 455214)