@@ -75,6 +75,7 @@ public:
 	Symbol* symbolOutlier{nullptr};
 	Symbol* symbolFarOut{nullptr};
 	Symbol* symbolData{nullptr};
+	Symbol* symbolWhiskerEnd{nullptr};
 	bool jitteringEnabled{true};
 
 	// whiskers
@@ -103,7 +104,7 @@ private:
 	void verticalBoxPlot(int);
 	void horizontalBoxPlot(int);
 	QPointF setOutlierPoint(double pos, double value);
-	void mapOutliersToScene(int index);
+	void mapSymbolsToScene(int index);
 	void updateFillingRect(int index, const QVector<QLineF>&);
 
 	void draw(QPainter*);
@@ -130,12 +131,18 @@ private:
 	QVector<QPainterPath> m_rugPath;
 	QVector<double> m_whiskerMin;
 	QVector<double> m_whiskerMax;
+
+	// vectors to store the information required to draw the different symbols
+	QVector<Points> m_whiskerEndPointsLogical; // positions of the whisker end values in logical coordinates
+	QVector<Points> m_whiskerEndPoints; // positions of the whisker end values in scene coordinates
 	QVector<Points> m_outlierPointsLogical; // positions of the outlier symbols in logical coordinates
 	QVector<Points> m_outlierPoints; // positions of the outlier symbols in scene coordinates
-	Points m_meanSymbolPoint; // position of the mean symbol in scene coordinates
-	QVector<bool> m_meanSymbolPointVisible; // true/false if the mean point is visible in the plot or not
-	Points m_medianSymbolPoint; // position of the median symbol in scene coordinates
-	QVector<bool> m_medianSymbolPointVisible; // true/false if the median point is visible in the plot or not
+	Points m_meanPointLogical; // position of the mean symbol in logical coordinates
+	Points m_meanPoint; // position of the mean symbol in scene coordinates
+	QVector<bool> m_meanPointVisible; // true/false if the mean point is visible in the plot or not
+	Points m_medianPointLogical; // position of the median symbol in logical coordinates
+	Points m_medianPoint; // position of the median symbol in scene coordinates
+	QVector<bool> m_medianPointVisible; // true/false if the median point is visible in the plot or not
 	QVector<Points> m_dataPointsLogical; // positions of the data points in logical coordinates
 	QVector<Points> m_dataPoints; // positions of the data points in scene coordinates
 	QVector<Points> m_farOutPointsLogical; // positions of the far out values in logical coordinates
